--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@ bcrypt==3.1.6
 certifi==2018.4.16
 cffi==1.12.2
 chardet==3.0.4
+Click==7.0
 colorama==0.3.9
 cryptography==2.6.1
 docutils==0.14
 filelock==3.0.10
-Flask==0.10.1
+Flask==1.0.2
 httpie==1.0.2
 idna==2.6
 imagesize==1.1.0
