--- a/requirements.txt
+++ b/requirements.txt
@@ -27,14 +27,14 @@ Pygments==2.2.0
 PyNaCl==1.3.0
 pyparsing==2.3.1
 pytz==2018.9
-PyYAML==3.13
-requests==2.18.4
+PyYAML>=4.2b1
+requests>=2.20.0
 six==1.12.0
 snowballstemmer==1.2.1
 Sphinx==1.8.4
 sphinxcontrib-websupport==1.1.0
 toml==0.10.0
 tox==3.7.0
-urllib3==1.22
+urllib3>=1.23
 virtualenv==16.4.1
 Werkzeug==0.14.1
